--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,9 @@
 @import '../node_modules/bootstrap-4-grid/scss/grid.scss';
+@import './assets/scss/vars.scss';
 
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background-color: $body-color;
 }
