--- a/src/pages/result/Result.scss
+++ b/src/pages/result/Result.scss
@@ -1,5 +1,7 @@
-.itemsList{
-  list-style: none;
-  margin: 0;
-  padding: 0;
+.Result{
+  .itemsList {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
 }
